--- a/sshaili.html
+++ b/sshaili.html
@@ -117,38 +117,37 @@
     <body>
         <div id="header-background"></div>
         <div id="wrapper">
-            <h1><img id="profile-pic" src=undefined alt="profile-pic"></h1>
-            <h1 id="name">Hi! My name is undefined</h1>
-            
+            <h1><img id="profile-pic" src=https://avatars2.githubusercontent.com/u/55032521?v=4 alt="profile-pic"></h1>
+            <h1 id="name">Hi! My name is Shaili Shah</h1>
+            <h3>Currently @ Verifone Canada Inc.</h3>
             <h2>
             ""
-            <a href="undefined"><i class="fab fa-github"><span>&nbsp;</span></i>GitHub</a>
-            <span>&emsp;</span>
-            <a href="undefined"><i class="fas fa-globe"><span>&nbsp;</span></i>Website</a>
+            <a href="https://github.com/sshaili"><i class="fab fa-github"><span>&nbsp;</span></i>GitHub</a>
+            
             </h2>
         </div>
         <div id="message">
-            <h1></h1>        
+            <h1>Information system Engineer</h1>        
         </div>
         <div id="git-buttons">
             <div class="github-buttons">
                 <div class="git-btn" id="repos">
                     <h2 class="buttons">Public Repositories</h2>
-                    <h2 class="buttons">undefined</h2>
+                    <h2 class="buttons">14</h2>
                 </div>
                 <div class="git-btn" id="stars">
                     <h2 class="buttons">Github Stars</h2>
-                    <h2 class="buttons">undefined</h2>
+                    <h2 class="buttons">0</h2>
                 </div>
             </div>
             <div class="github-buttons">
                 <div class="git-btn" id="followers">
                     <h2 class="buttons">Followers</h2>
-                    <h2 class="buttons">undefined</h2>
+                    <h2 class="buttons">1</h2>
                 </div>
                 <div class="git-btn" id="following">
                     <h2 class="buttons">Following</h2>
-                    <h2 class="buttons">undefined</h2>
+                    <h2 class="buttons">0</h2>
                 </div>
             </div>
         </div>
